Changes in 1.19.1:
 * Add option to disable scaling of marker border with point scaling
 * Implement label at-minimum/at-maximum for ternary plot

Bug fixes:
 * Fix broken drag and drop in documents
 * Fix deleted C/C++ object crash when using undo and in tutorial
 * Fix compilation in MSVC for Python 3
 * Remove warning/error in compilation in gcc in SUSE
 * Add Python version classifiers
 * Fix document icons in Windows binary

Changes in 1.19:
 * Make code compatible with python3
 * Separation of python module and resources in source package
   (packagers may need to consult INSTALL)
 * Move to v2 of PyQt API
 * Remove deprecated numpy API from helpers module
 * Allow FITS dataset names to be blank if prefix/suffix are not
 * New ast-based code security checker
 * Picker uses 1-based index for consistency
 * Allow non-text datasets to be used for labels
 * Add number->text conversion dataset plugin
 * Add binning dataset plugin
 * Allow more significant figures in float values
 * Intelligent choice of significant figures when interactively
   changing axis range
 * Decrease minimum range of axis
 * Add notes setting to document, pages and graphs

Bug fixes:
 * Fix crash if other linked axis not initialized
 * Fix crash if trying to edit non-editable datasets
 * Make ignore exception work in error reporting dialog
 * Renaming datasets, widgets and editing data now allow original
   text to be edited, rather than being cleared
 * Fix line positions on broken axes
 * OS X Mavericks - fixes for opening files from finder and fonts

Changes in 1.18:
 * Add support for dataset expressions when plotting
 * Add axis-function widget for plotting axes which have a scale given
   by a function, or are linked to a different axis via a function
 * Add stepped colour maps
 * Support editing multiple datasets simultaneously in editor
 * Add setting to fix aspect-ratio of graphs
 * Add 'vcentre' line step mode for vertical step plots